test (post) : 게시물 조회 테스트 코드 수정
- 몇몇 컬럼이 비어있어 예외 발생
- null 체크 로직 추가